test/error/E13.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": [
		{
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	],
	"connections": "nope"
}
